fixed letters spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ h1, h2 {
   color: #337dc0;
   font-weight: normal;
   font-family: 'eastmangrotesque-extrabold';
-  letter-spacing: 0; }
+  letter-spacing: -.05rem; }
 
 h3 {
   color: #337dc0;
